<resources>
    <string name="app_name">NewSterApp</string>
    <string name="facebook_app_id">416782628519477</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_sing_in">Please sign in</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hint_login">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_favorite_news">Personal news</string>
    <string name="title_all_news">All news</string>
    <string name="title_profile">Profile</string>
    <string name="text_score">Score: %d</string>
    <string name="share_news">Share news!</string>
</resources>
