<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobapply.newzgamification.fragments.ProfileFragment">

    <EditText
        android:id="@+id/profile_email"
        style="@style/NewSterRegularMargins"
        android:hint="@string/hint_login"
        />

    <EditText
        android:id="@+id/profile_password"
        android:hint="@string/hint_password"
        style="@style/NewSterRegularMargins"/>

    <TextView
        android:id="@+id/profile_score"
        android:hint="@string/hint_password"
        android:text="@string/text_score"
        android:textStyle="bold"
        style="@style/NewSterRegularMargins"/>

</LinearLayout>
