<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mobapply.newsterapp.activities.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_unian_logo"/>


    <TextView android:text="@string/label_sing_in" android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_email"
        style="@style/NewSterRegularMargins"
        android:visibility="gone"
        android:hint="@string/hint_login"
        />

    <EditText
        android:id="@+id/login_password"
        android:hint="@string/hint_password"
        android:visibility="gone"
        style="@style/NewSterRegularMargins"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:visibility="gone"
        android:background="@drawable/button_login"
        style="@style/NewSterRegularMargins" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

</LinearLayout>
